--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^3.3.0",
     "esbuild": "^0.14.8",
-    "miniflare": "^2.3.0"
+    "miniflare": "^2.3.0",
+    "js-yaml": "^4.1.0"
   }
 }
