copy over all existing faq items

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slshx-starter",
+  "name": "xenon-support",
   "version": "1.0.0",
   "type": "module",
   "module": "dist/index.mjs",
