--- a/topics/backups/share.yaml
+++ b/topics/backups/share.yaml
@@ -1,1 +1,3 @@
 title: Can I share my backups with other users?
+content: |
+  **No.** A backup is linked to the Discord account that was used to create it and can't be shared with other Discord users.
