--- a/topics/templates/load.yaml
+++ b/topics/templates/load.yaml
@@ -1,1 +1,11 @@
 title: How do I load a template?
+content: |
+  You can find templates at [xenon.bot/templates](<https://xenon.bot/templates>). 
+  Either click on "Create New Server" to create a new server from the template or [invite Xenon](<https://xenon.bot/invite>) and use the displayed command to load the template on an existing server.
+
+  You need to be the server owner to load a template by default.
+links:
+  - name: Find a template
+    url: https://xenon.bot/templates
+  - name: Invite Xenon
+    url: https://xenon.bot/invite
