--- a/topics/misc/how-to-invite.yaml
+++ b/topics/misc/how-to-invite.yaml
@@ -1,5 +1,5 @@
 title: How do I add Xenon to my server?
-content: Click the [here](<https://xenon.bot/invite>) or the button below to invite Xenon to your server.
+content: Click the [here](<https://xenon.bot/invite>), press the button below to invite Xenon to your server or use the </help:819666853831901236> command.
 links:
   - name: Invite
     url: "https://xenon.bot/invite"
