fix indention and typo

--- a/topics/misc/_category.yaml
+++ b/topics/misc/_category.yaml
@@ -2,4 +2,4 @@ title: Other Topics & Questions
 subtitle: Topics not related to the other categories
 position: 3
 content: |
-  Select a topic below to find answers to the most command questions.
+  Select a topic below to find answers to the most common questions.
